2015-01-29  Ilya Enkovich  <ilya.enkovich@intel.com>

	PR middle-end/64805
	* ipa-inline.c (early_inliner): Rebuild IPA_REF_CHKP reference
	to avoid error in cgraph node verification.

2015-01-29  Marek Polacek  <polacek@redhat.com>

	* doc/standards.texi: Reflect that the default for C is gnu11.

2015-01-29  Kaz Kojima  <kkojima@gcc.gnu.org>

	PR target/64761
	* reorg.c (switch_text_sections_between_p): New function.
	(relax_delay_slots): Call it when testing if the jump insn
	is removable.  Use targetm.can_follow_jump when testing if
	the conditional branch can follow an unconditional jump.

2015-01-27  Caroline Tice  <cmtice@google.com>

	Committing VTV Cywin/Ming patch for Patrick Wollgast
	* config/i386/cygwin.h (STARTFILE_SPEC): Add vtv_start.o,
	if -fvtable-verify=preinit/std is used.
	* config/i386/mingw-w64.h (STARTFILE_SPEC): Likewise.
	* config/i386/mingw32.h (STARTFILE_SPEC): Likewise.
	* config/i386/cygwin.h (ENDFILE_SPEC): Add vtv_end.o,
	if -fvtable-verify=preinit/std is used.
	* config/i386/mingw32.h (ENDFILE_SPEC): Likewise.
	* config/i386/cygwin.h (LIB_SPEC): Pass -lvtv and -lpsapi,
	if -fvtable-verify=preinit/std is used.
	* config/i386/mingw-w64.h (LIB_SPEC): Likewise.
	* config/i386/mingw32.h (LIB_SPEC): Likewise.
	* varasm.c (assemble_variable): Add code to properly set the comdat
	section and name for the .vtable_map_vars section in case the
	target is PE or COFF.

2015-01-29  Jan Hubicka  <hubicka@ucw.cz>

	PR ipa/64801
	* cgraphunit.c (init_lowered_empty_function): Add CoUNT parameter;
	make sane BB profile.
	(cgraph_node::expand_thunk): Make sane BB profile.
	(cgraph_node::create_wrapper): Do not set call_stmt_cannot_inline_p.
	* cgraph.h (init_lowered_empty_function): Update prototype.
	* config/i386/i386.c (make_resolver_func): Update call.
	* predict.c (gate): Disable branch prediction pass if
	profile is already there.

2015-01-29  Jan Hubicka  <hubicka@ucw.cz>

	* optc-save-gen.awk: flag_fp_contract_mode is no longer speical.